[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.14"
crossbeam = { version = "0.8.0", optional = true }
csv = "1.0.0"
log = "0.4.4"
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "1.0.0"

[dev-dependencies]
serde_test = "1.0.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["serial"]
serial = []
stream = ["dep:crossbeam"]
