[package]
name = "payment-engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
crossbeam = { version = "0.8.4", optional = true }
csv = "1.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
googletest = "0.13"
serde_test = "1.0.177"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["serial"]
serial = []
stream = ["dep:crossbeam"]
